Novo serviço porta 3110

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   pgrestDL03:
-    image: postgrest/postgrest
+    image: postgrest/postgrest:latest
     restart: unless-stopped
     ports:
       - "3103:3103"
@@ -13,7 +13,7 @@ services:
       - PGRST_DB_SCHEMA=api 
       - PGRST_SERVER_PORT=3103
   pgrestDL04:
-    image: postgrest/postgrest
+    image: postgrest/postgrest:latest
     restart: unless-stopped
     ports:
       - "3104:3104"
@@ -24,4 +24,16 @@ services:
       - PGRST_DB_ANON_ROLE=postgres
       - PGRST_DB_SCHEMA=api
       - PGRST_SERVER_PORT=3104
+  pgrestDL10:
+    image: postgrest/postgrest:latest
+    restart: unless-stopped
+    ports:
+      - "3110:3110"
+    network_mode: host
+    environment:
+      - RACK_ENV=production
+      - PGRST_DB_URI=postgres://postgres@localhost/dl10s_osmcod
+      - PGRST_DB_ANON_ROLE=postgres
+      - PGRST_DB_SCHEMA=api
+      - PGRST_SERVER_PORT=3110
 
