--- a/src/makefile
+++ b/src/makefile
@@ -98,17 +98,17 @@ ini_step2b_ins: # revisar conforme mk-ini_step1.sh que precisaria ser função d
 	psql $(pg_uri)/ingest1    < pubLib.sql
 	psql $(pg_uri)/ingest1    < $(gits_basepath)/pg_pubLib-v1/src/pubLib05hcode-distrib.sql
 	psql $(pg_uri)/ingest1    < sys_pubLib.sql
-	psql $(pg_uri)/ingest1    < ingest-step1-ini.sql
+# 	psql $(pg_uri)/ingest1    < ingest-step1-ini.sql # schema ingest migrated.
 	@echo "------- ingest2 REDO ---------"
 	psql $(pg_uri)/ingest2    < pubLib.sql
 	psql $(pg_uri)/ingest2    < $(gits_basepath)/pg_pubLib-v1/src/pubLib05hcode-distrib.sql
 	psql $(pg_uri)/ingest2    < sys_pubLib.sql
-	psql $(pg_uri)/ingest2    < ingest-step1-ini.sql
+# 	psql $(pg_uri)/ingest2    < ingest-step1-ini.sql # schema ingest migrated.
 	@echo "------- dl03t_main REDO ---------"
 	psql $(pg_uri)/dl03t_main < pubLib.sql
 	psql $(pg_uri)/dl03t_main < $(gits_basepath)/pg_pubLib-v1/src/pubLib05hcode-distrib.sql
 	psql $(pg_uri)/dl03t_main < sys_pubLib.sql
-	psql $(pg_uri)/dl03t_main < ingest-step1-ini.sql
+# 	psql $(pg_uri)/dl03t_main < ingest-step1-ini.sql # schema ingest migrated.
 
 ini_step3_api: $(opt_lock)/WS-makeStep02.~feito
 	psql $(pg_uri)/dl03t_main < step01-iniApi.sql
@@ -131,7 +131,7 @@ optim_step1: optim-step1-ini.sql $(opt_lock)/WS-makeStep02.~feito
 	whoami
 	@read _digite_enter_
 	psql $(pg_uri)/dl03t_main < pubLib.sql
-	psql $(pg_uri)/dl03t_main < ingest-step1-ini.sql
+# 	psql $(pg_uri)/dl03t_main < ingest-step1-ini.sql # schema ingest migrated.
 	psql $(pg_uri)/dl03t_main < optim-step1-ini.sql
 	# conferir se bug pois só roda via "sudo su postgres"
 	sh $(pg_io)/run_wgets-all.sh
