--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -58,5 +58,5 @@ services:
       - RACK_ENV=production
       - PGRST_DB_URI=postgres://postgres@localhost/dl02s_main
       - PGRST_DB_ANON_ROLE=postgres
-      - PGRST_DB_SCHEMA=public
+      - PGRST_DB_SCHEMA=api
       - PGRST_SERVER_PORT=3102
