--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,8 +3,6 @@ services:
   pgrestDL03:
     image: postgrest/postgrest:latest
     restart: unless-stopped
-    #ports:
-    #  - "3103:3103"
     network_mode: host
     environment:
       - RACK_ENV=development
@@ -12,6 +10,16 @@ services:
       - PGRST_DB_ANON_ROLE=postgres
       - PGRST_DB_SCHEMA=api 
       - PGRST_SERVER_PORT=3103
+  pgrestDL05:
+    image: postgrest/postgrest:latest
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - RACK_ENV=development
+      - PGRST_DB_URI=postgres://postgres@localhost/dl05s_main
+      - PGRST_DB_ANON_ROLE=postgres
+      - PGRST_DB_SCHEMA=api
+      - PGRST_SERVER_PORT=3105
   pgrestDL04:
     image: postgrest/postgrest:latest
     restart: unless-stopped
